--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "plate-cli",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Javascript Boilerplate Command Line Generator",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/haegul/plate-cli.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Haegul Pyun",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/haegul/plate-cli/issues"
   },
-  "homepage": "https://github.com/haegul/plate-cli#readme"
+  "homepage": "https://github.com/haegul/plate-cli#readme",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
 }
