--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/haegul/plate-cli#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
     "commander": "^2.10.0",
     "download-git-repo": "^1.0.1"
   },
